# sc2-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  sc2_proxy.production.toml
src/: config.rs  game.rs  lib.rs  main.rs  maps.rs  paths.rs  portconfig.rs  proxy.rs  sc2.rs  sc2process.rs  supervisor.rs
src/config/: mod.rs  request_limits.rs
src/game/: game.rs  lobby.rs  messaging.rs  mod.rs  player.rs
src/remote_control/: message.rs  mod.rs
tests/: game_config.rs  remote_control.rs  test_config.toml
