[package]
name = "sc2-proxy"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
portpicker  = "*"

log = "0.4"
pretty_env_logger = "0.3.0"
dotenv = "0.13.0"

shellexpand = "1.0"
regex = "1.1.0"

tempfile = "3"
websocket = "0.22.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
sc2-proto = "0.2.1"
protobuf = { version = "2.3.0", features = ["with-bytes"] }

