[package]
name = "sc2-proxy"
description = "StarCraft II bot API management layer"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

repository = "https://github.com/Dentosal/sc2-proxy"
readme = "README.md"

keywords = ["sc2", "starcraft2"]
categories = ["games"]

license = "MIT"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3.0"
dotenv = "0.13.0"

shellexpand = "1.0"
regex = "1.1.0"

portpicker  = "0.1"
tempfile = "3"
websocket = "0.22.2"
bufstream = "0.1"
crossbeam = "0.7.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
sc2-proto = "0.2.1"
protobuf = { version = "2.3.0", features = ["with-bytes"] }

